texlive-bin (2016.20160513.41080-4) UNRELEASED; urgency=medium

  * fix for upmendex segfaults (upstream svn 41497 and 41498)

 -- Norbert Preining <preining@debian.org>  Mon, 20 Jun 2016 10:17:24 +0900

texlive-bin (2016.20160513.41080-3) unstable; urgency=medium

  * fix pdftex segfault on pdfmatch invocations (upstream svn 41418)
  * rename SOURCE_DATE_EPOCH_TEX_PRIMITIVES to FORCE_SOURCE_DATE
    as requested by reproducible-build. (upstream svn 41417)
  * fix check_box bug in ptex (upstream svn 41295)

 -- Norbert Preining <preining@debian.org>  Tue, 14 Jun 2016 13:23:59 +0900

texlive-bin (2016.20160513.41080-2) unstable; urgency=medium

  * uniform luajit options
  * try fixing test errors on icu-related progs
  * break context << 2016 due to luatex incompatibility (Closes: #824474)
  * syntax fix in rules
  * try to fix build/test errors on mips(el) and sparc (Closes: #824260)
    - make C(XX)FLAGS additive
    - remove mips(el) from luajit archs (debian/rules and /control)
    - disable upmendex on sparc/mips(el)

 -- Norbert Preining <preining@debian.org>  Wed, 18 May 2016 23:00:23 +0900

texlive-bin (2016.20160513.41080-1) unstable; urgency=medium

  * Imported Upstream version 2016.20160513.41080
    - fix for xetex and luatex
  * disable upstream included patch for dvipdfmx
  * fix building on jit-unsupported archs, thanks to Thorsten Glaser
    (Closes: #824166)

 -- Norbert Preining <preining@debian.org>  Fri, 13 May 2016 19:57:37 +0900

texlive-bin (2016.20160512.41045-1) unstable; urgency=medium

  * break against old texlive (Closes: #820716)
  * install a desktop file for xdvi (Thanks Pino Toscano, upupstream)
  * imported Upstream version 2016.20160512.41045
    support for suppressing time stamps (SOURCE_DATE_EPOCH) (Closes: #792202)
  * add support for SOURCE_DATE_EPOCH also to luatex
  * update patches
  * bump standards version - no further changes necessary
  * include a fix for dvipdfmx eating cid type2 font characters
