@@ -1,8 +1,9 @@
 texlive-bin (2016.20160513.41080-4) UNRELEASED; urgency=medium
 
   * fix for upmendex segfaults (upstream svn 41497 and 41498)
+    - reactivate upmendex building for all archs
 
- -- Norbert Preining <preining@debian.org>  Mon, 20 Jun 2016 10:17:24 +0900
+ -- Norbert Preining <preining@debian.org>  Mon, 20 Jun 2016 10:19:20 +0900
 
 texlive-bin (2016.20160513.41080-3) unstable; urgency=medium
 
